--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "simple-web-server"
 version = "0.1.0"
 edition = "2021"
-
+authors = ["Kiran S", "Kiran S <codehub.kirans@gmail.com>"]
+description = "A simple HTTP web server that uses a thread pool to respond asynchronously. Not intended for general use."
+readme = "README.md"
+categories = ["network-programming", "web-programming::http-server"]
+license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
